--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
     "format": "prettier --write \"src/**/*.{ts,html,css,scss,json}\"",
-    "format:check": "prettier --check \"src/**/*.{ts,html,css,scss,json}\""
+    "format:check": "prettier --check \"src/**/*.{ts,html,css,scss,json}\"",
+    "sheriff": "sheriff list src/main.ts"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +30,8 @@
     "@angular-devkit/build-angular": "^19.2.13",
     "@angular/cli": "^19.2.13",
     "@angular/compiler-cli": "^19.2.0",
+    "@softarc/eslint-plugin-sheriff": "^0.18.0",
+    "@softarc/sheriff-core": "^0.18.0",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "19.6.0",
     "eslint": "^9.27.0",
