--- a/package.json
+++ b/package.json
@@ -22,9 +22,17 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ngrx/signals": "^19.2.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
+    "@primeng/themes": "^19.1.3",
+    "@tailwindcss/postcss": "^4.1.8",
+    "postcss": "^8.5.4",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.8",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
