--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "@angular-devkit/build-angular": "^19.2.14",
     "@angular/cli": "^19.2.14",
     "@angular/compiler-cli": "^19.2.14",
+    "@playwright/test": "^1.52.0",
     "@softarc/eslint-plugin-sheriff": "^0.18.0",
     "@softarc/sheriff-core": "^0.18.0",
     "@types/jasmine": "~5.1.8",
+    "@types/node": "^22.15.30",
     "angular-eslint": "19.6.0",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
