--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ Thumbs.db
 
 # Playwright
 node_modules/
-/test-results/
-/playwright-report/
-/blob-report/
+e2e/test-results/
+e2e/playwright-report/
+e2e/blob-report/
 /playwright/.cache/
