added automatic deployment to github pages

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:githubpages": "ng build --base-href=/angular-starter-3/",
+    "deploy:githubpages": "npx angular-cli-ghpages --dir=dist/angular-starter-3/browser",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test:e2e": "npx playwright test --config=e2e/playwright.config.ts",
@@ -46,6 +48,7 @@
     "@softarc/sheriff-core": "^0.18.0",
     "@types/jasmine": "~5.1.8",
     "@types/node": "^22.15.30",
+    "angular-cli-ghpages": "^2.0.3",
     "angular-eslint": "19.6.0",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
