another github pages test

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,15 +20,12 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8
+          version: 10
       - name: Install dependencies
         run: pnpm install
 
       - name: Build Angular app
-        run: pnpm run build -- --base-href=/themmerich/
+        run: pnpm run build:githubpages
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages
-          folder: dist/angular-starter-3/browser
+        run: pnpm run deploy:githubpages
