--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
 
+permissions:
+  contents: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -32,3 +35,4 @@ jobs:
         with:
           branch: gh-pages
           folder: dist/angular-starter-3/browser
+          token: ${{ secrets.GITHUB_TOKEN }}
